--- a/sentiment-network/Sentiment_Classification_Projects.ipynb
+++ b/sentiment-network/Sentiment_Classification_Projects.ipynb
@@ -77,6 +77,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "collapsed": true,
     "nbpresent": {
      "id": "eba2b193-0419-431e-8db9-60f34dd3fe83"
     }
@@ -105,7 +106,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "len(reviews)"
@@ -4991,7 +4994,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import time\n",
@@ -5247,6 +5252,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -6540,14 +6546,252 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# TODO: -Copy the SentimentNetwork class from Projet 3 lesson\n",
-    "#       -Modify it to reduce noise, like in the video "
+    "import time\n",
+    "import sys\n",
+    "import numpy as np\n",
+    "from IPython.core.debugger import set_trace\n",
+    "\n",
+    "# Encapsulate our neural network in a class\n",
+    "class SentimentNetwork:\n",
+    "    def __init__(self, reviews, labels, hidden_nodes = 10, learning_rate = 0.1):\n",
+    "        \"\"\"Create a SentimenNetwork with the given settings\n",
+    "        Args:\n",
+    "            reviews(list) - List of reviews used for training\n",
+    "            labels(list) - List of POSITIVE/NEGATIVE labels associated with the given reviews\n",
+    "            hidden_nodes(int) - Number of nodes to create in the hidden layer\n",
+    "            learning_rate(float) - Learning rate to use while training\n",
+    "        \n",
+    "        \"\"\"\n",
+    "        # Assign a seed to our random number generator to ensure we get\n",
+    "        # reproducable results during development \n",
+    "        np.random.seed(1)\n",
+    "\n",
+    "        # process the reviews and their associated labels so that everything\n",
+    "        # is ready for training\n",
+    "        self.pre_process_data(reviews, labels)\n",
+    "        \n",
+    "        # Build the network to have the number of hidden nodes and the learning rate that\n",
+    "        # were passed into this initializer. Make the same number of input nodes as\n",
+    "        # there are vocabulary words and create a single output node.\n",
+    "        self.init_network(len(self.review_vocab),hidden_nodes, 1, learning_rate)\n",
+    "\n",
+    "    def pre_process_data(self, reviews, labels):\n",
+    "        \n",
+    "        review_vocab = set()\n",
+    "        # TODO: populate review_vocab with all of the words in the given reviews\n",
+    "        #       Remember to split reviews into individual words \n",
+    "        #       using \"split(' ')\" instead of \"split()\".\n",
+    "        for review in reviews:\n",
+    "            for word in review.split(' '):\n",
+    "                if len(word) > 0:\n",
+    "                    review_vocab.add(word)\n",
+    "        \n",
+    "        # Convert the vocabulary set to a list so we can access words via indices\n",
+    "        self.review_vocab = list(review_vocab)\n",
+    "        \n",
+    "        label_vocab = set()\n",
+    "        for label in labels:\n",
+    "            label_vocab.add(label)\n",
+    "        \n",
+    "        # Convert the label vocabulary set to a list so we can access labels via indices\n",
+    "        self.label_vocab = list(label_vocab)\n",
+    "        \n",
+    "        # Store the sizes of the review and label vocabularies.\n",
+    "        self.review_vocab_size = len(self.review_vocab)\n",
+    "        self.label_vocab_size = len(self.label_vocab)\n",
+    "        \n",
+    "        # Create a dictionary of words in the vocabulary mapped to index positions\n",
+    "        self.word2index = {}\n",
+    "        for i,word in enumerate(self.review_vocab):\n",
+    "            self.word2index[word] = i\n",
+    "\n",
+    "        \n",
+    "        # Create a dictionary of labels mapped to index positions\n",
+    "        self.label2index = {}\n",
+    "        for i, label in enumerate(self.label_vocab):\n",
+    "            self.label2index[label] = i\n",
+    "        # TODO: do the same thing you did for self.word2index and self.review_vocab, \n",
+    "        #       but for self.label2index and self.label_vocab instead\n",
+    "         \n",
+    "        \n",
+    "    def init_network(self, input_nodes, hidden_nodes, output_nodes, learning_rate):\n",
+    "        # Store the number of nodes in input, hidden, and output layers.\n",
+    "        self.input_nodes = input_nodes\n",
+    "        self.hidden_nodes = hidden_nodes\n",
+    "        self.output_nodes = output_nodes\n",
+    "\n",
+    "        # Store the learning rate\n",
+    "        self.learning_rate = learning_rate\n",
+    "\n",
+    "        # Initialize weights\n",
+    "        \n",
+    "        # TODO: initialize self.weights_0_1 as a matrix of zeros. These are the weights between\n",
+    "        #       the input layer and the hidden layer.\n",
+    "        self.weights_0_1 = np.zeros((self.input_nodes,self.hidden_nodes))\n",
+    "        \n",
+    "        # TODO: initialize self.weights_1_2 as a matrix of random values. \n",
+    "        #       These are the weights between the hidden layer and the output layer.\n",
+    "        self.weights_1_2 = np.random.normal(0.0, self.output_nodes**-0.5, \n",
+    "                                                (self.hidden_nodes, self.output_nodes))\n",
+    "        \n",
+    "        # TODO: Create the input layer, a two-dimensional matrix with shape \n",
+    "        #       1 x input_nodes, with all values initialized to zero\n",
+    "        self.layer_0 = np.zeros((1,input_nodes))\n",
+    "    \n",
+    "        \n",
+    "    def update_input_layer(self,review):\n",
+    "        # TODO: You can copy most of the code you wrote for update_input_layer \n",
+    "        #       earlier in this notebook. \n",
+    "        #\n",
+    "        #       However, MAKE SURE YOU CHANGE ALL VARIABLES TO REFERENCE\n",
+    "        #       THE VERSIONS STORED IN THIS OBJECT, NOT THE GLOBAL OBJECTS.\n",
+    "        #       For example, replace \"layer_0 *= 0\" with \"self.layer_0 *= 0\"\n",
+    "        self.layer_0 *= 0\n",
+    "    \n",
+    "    # TODO: count how many times each word is used in the given review and store the results in layer_0 \n",
+    "        for word in review.split(' '):\n",
+    "            if (word in self.word2index.keys()):\n",
+    "                self.layer_0[0][self.word2index[word]] = 1\n",
+    "                \n",
+    "    def get_target_for_label(self,label):\n",
+    "        # TODO: Copy the code you wrote for get_target_for_label \n",
+    "        #       earlier in this notebook. \n",
+    "        return self.label2index[label]\n",
+    "        \n",
+    "    def sigmoid(self,x):\n",
+    "        # TODO: Return the result of calculating the sigmoid activation function\n",
+    "        #       shown in the lectures\n",
+    "        return 1/(1+np.exp(-x))\n",
+    "    \n",
+    "    def sigmoid_output_2_derivative(self,output):\n",
+    "        # TODO: Return the derivative of the sigmoid activation function, \n",
+    "        #       where \"output\" is the original output from the sigmoid fucntion \n",
+    "        return output*(1-output)\n",
+    "\n",
+    "    def train(self, training_reviews, training_labels):\n",
+    "        \n",
+    "        # make sure out we have a matching number of reviews and labels\n",
+    "        assert(len(training_reviews) == len(training_labels))\n",
+    "        \n",
+    "        # Keep track of correct predictions to display accuracy during training \n",
+    "        correct_so_far = 0\n",
+    "        \n",
+    "        # Remember when we started for printing time statistics\n",
+    "        start = time.time()\n",
+    "\n",
+    "        # loop through all the given reviews and run a forward and backward pass,\n",
+    "        # updating weights for every item\n",
+    "        for i in range(len(training_reviews)):\n",
+    "            \n",
+    "            # TODO: Get the next review and its correct label\n",
+    "            review = training_reviews[i]\n",
+    "            target = self.get_target_for_label(training_labels[i])\n",
+    "            \n",
+    "            # TODO: Implement the forward pass through the network. \n",
+    "            #       That means use the given review to update the input layer, \n",
+    "            #       then calculate values for the hidden layer,\n",
+    "            #       and finally calculate the output layer.\n",
+    "            # \n",
+    "            #       Do not use an activation function for the hidden layer,\n",
+    "            #       but use the sigmoid activation function for the output layer.\n",
+    "            self.update_input_layer(review)\n",
+    "            hidden_layer_output = np.dot(self.layer_0,self.weights_0_1)\n",
+    "            output = self.sigmoid(np.matmul(hidden_layer_output,self.weights_1_2))\n",
+    "            \n",
+    "            # TODO: Implement the back propagation pass here. \n",
+    "            #       That means calculate the error for the forward pass's prediction\n",
+    "            #       and update the weights in the network according to their\n",
+    "            #       contributions toward the error, as calculated via the\n",
+    "            #       gradient descent and back propagation algorithms you \n",
+    "            #       learned in class.\n",
+    "            error = target - output\n",
+    "        \n",
+    "            layer2errorTerm = error*self.sigmoid_output_2_derivative(output)\n",
+    "            layer1errorTerm = layer2errorTerm.dot(self.weights_1_2.T)\n",
+    "            \n",
+    "            self.weights_1_2 += self.learning_rate*np.dot(hidden_layer_output.T,layer2errorTerm)\n",
+    "            self.weights_0_1 += self.learning_rate*np.dot(self.layer_0.T, layer1errorTerm)\n",
+    "        \n",
+    "            \n",
+    "            # TODO: Keep track of correct predictions. To determine if the prediction was\n",
+    "            #       correct, check that the absolute value of the output error \n",
+    "            #       is less than 0.5. If so, add one to the correct_so_far count.\n",
+    "            if (error*error < 0.25):\n",
+    "                correct_so_far += 1\n",
+    "            \n",
+    "            # For debug purposes, print out our prediction accuracy and speed \n",
+    "            # throughout the training process. \n",
+    "\n",
+    "            elapsed_time = float(time.time() - start)\n",
+    "            reviews_per_second = i / elapsed_time if elapsed_time > 0 else 0\n",
+    "            \n",
+    "            sys.stdout.write(\"\\rProgress:\" + str(100 * i/float(len(training_reviews)))[:4] \\\n",
+    "                             + \"% Speed(reviews/sec):\" + str(reviews_per_second)[0:5] \\\n",
+    "                             + \" #Correct:\" + str(correct_so_far) + \" #Trained:\" + str(i+1) \\\n",
+    "                             + \" Training Accuracy:\" + str(correct_so_far * 100 / float(i+1))[:4] + \"%\")\n",
+    "            #+ str(self.weights_0_1) + str(self.weights_1_2)\n",
+    "            if(i % 2500 == 0):\n",
+    "                print(\"\")\n",
+    "    \n",
+    "    \n",
+    "    def test(self, testing_reviews, testing_labels):\n",
+    "        \"\"\"\n",
+    "        Attempts to predict the labels for the given testing_reviews,\n",
+    "        and uses the test_labels to calculate the accuracy of those predictions.\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        # keep track of how many correct predictions we make\n",
+    "        correct = 0\n",
+    "\n",
+    "        # we'll time how many predictions per second we make\n",
+    "        start = time.time()\n",
+    "\n",
+    "        # Loop through each of the given reviews and call run to predict\n",
+    "        # its label. \n",
+    "        for i in range(len(testing_reviews)):\n",
+    "            pred = self.run(testing_reviews[i])\n",
+    "            if(pred == testing_labels[i]):\n",
+    "                correct += 1\n",
+    "            \n",
+    "            # For debug purposes, print out our prediction accuracy and speed \n",
+    "            # throughout the prediction process. \n",
+    "\n",
+    "            elapsed_time = float(time.time() - start)\n",
+    "            reviews_per_second = i / elapsed_time if elapsed_time > 0 else 0\n",
+    "            \n",
+    "            sys.stdout.write(\"\\rProgress:\" + str(100 * i/float(len(testing_reviews)))[:4] \\\n",
+    "                             + \"% Speed(reviews/sec):\" + str(reviews_per_second)[0:5] \\\n",
+    "                             + \" #Correct:\" + str(correct) + \" #Tested:\" + str(i+1) \\\n",
+    "                             + \" Testing Accuracy:\" + str(correct * 100 / float(i+1))[:4] + \"%\")   \n",
+    "    def run(self, review):\n",
+    "        \"\"\"\n",
+    "        Returns a POSITIVE or NEGATIVE prediction for the given review.\n",
+    "        \"\"\"\n",
+    "        # TODO: Run a forward pass through the network, like you did in the\n",
+    "        #       \"train\" function. That means use the given review to \n",
+    "        #       update the input layer, then calculate values for the hidden layer,\n",
+    "        #       and finally calculate the output layer.\n",
+    "        #\n",
+    "        #       Note: The review passed into this function for prediction \n",
+    "        #             might come from anywhere, so you should convert it \n",
+    "        #             to lower case prior to using it.\n",
+    "        self.update_input_layer(review.lower())\n",
+    "        hidden_layer_output = np.dot(self.layer_0,self.weights_0_1)\n",
+    "        output = self.sigmoid(np.matmul(hidden_layer_output,self.weights_1_2))\n",
+    "        \n",
+    "        # TODO: The output layer should now contain a prediction. \n",
+    "        #       Return `POSITIVE` for predictions greater-than-or-equal-to `0.5`, \n",
+    "        #       and `NEGATIVE` otherwise.\n",
+    "        if (output >= 0.5):\n",
+    "            return 'POSITIVE'\n",
+    "        else:\n",
+    "            return 'NEGATIVE'\n"
    ]
   },
   {
@@ -6559,11 +6803,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Progress:0.0% Speed(reviews/sec):0.0 #Correct:0 #Trained:1 Training Accuracy:0.0%\n",
+      "Progress:10.4% Speed(reviews/sec):167.2 #Correct:1839 #Trained:2501 Training Accuracy:73.5%\n",
+      "Progress:20.8% Speed(reviews/sec):157.9 #Correct:3828 #Trained:5001 Training Accuracy:76.5%\n",
+      "Progress:31.2% Speed(reviews/sec):163.9 #Correct:5931 #Trained:7501 Training Accuracy:79.0%\n",
+      "Progress:41.6% Speed(reviews/sec):168.9 #Correct:8049 #Trained:10001 Training Accuracy:80.4%\n",
+      "Progress:52.0% Speed(reviews/sec):171.7 #Correct:10179 #Trained:12501 Training Accuracy:81.4%\n",
+      "Progress:62.5% Speed(reviews/sec):173.7 #Correct:12315 #Trained:15001 Training Accuracy:82.0%\n",
+      "Progress:72.9% Speed(reviews/sec):174.8 #Correct:14425 #Trained:17501 Training Accuracy:82.4%\n",
+      "Progress:83.3% Speed(reviews/sec):175.4 #Correct:16607 #Trained:20001 Training Accuracy:83.0%\n",
+      "Progress:93.7% Speed(reviews/sec):175.7 #Correct:18794 #Trained:22501 Training Accuracy:83.5%\n",
+      "Progress:99.9% Speed(reviews/sec):175.5 #Correct:20113 #Trained:24000 Training Accuracy:83.8%"
+     ]
+    }
+   ],
    "source": [
     "mlp = SentimentNetwork(reviews[:-1000],labels[:-1000], learning_rate=0.1)\n",
     "mlp.train(reviews[:-1000],labels[:-1000])"
@@ -6578,11 +6838,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Progress:99.9% Speed(reviews/sec):674.8 #Correct:861 #Tested:1000 Testing Accuracy:86.1%"
+     ]
+    }
+   ],
    "source": [
     "mlp.test(reviews[-1000:],labels[-1000:])"
    ]
@@ -7241,7 +7507,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
