--- a/sentiment-network/Sentiment_Classification_Projects.ipynb
+++ b/sentiment-network/Sentiment_Classification_Projects.ipynb
@@ -75,9 +75,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true,
     "nbpresent": {
      "id": "eba2b193-0419-431e-8db9-60f34dd3fe83"
     }
@@ -7057,14 +7056,228 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: -Copy the SentimentNetwork class from Project 4 lesson\n",
-    "#       -Modify it according to the above instructions "
+    "import time\n",
+    "import sys\n",
+    "import numpy as np\n",
+    "from IPython.core.debugger import set_trace\n",
+    "\n",
+    "# Encapsulate our neural network in a class\n",
+    "class SentimentNetwork:\n",
+    "    def __init__(self, reviews, labels, hidden_nodes = 10, learning_rate = 0.1):\n",
+    "        \"\"\"Create a SentimenNetwork with the given settings\n",
+    "        Args:\n",
+    "            reviews(list) - List of reviews used for training\n",
+    "            labels(list) - List of POSITIVE/NEGATIVE labels associated with the given reviews\n",
+    "            hidden_nodes(int) - Number of nodes to create in the hidden layer\n",
+    "            learning_rate(float) - Learning rate to use while training\n",
+    "        \n",
+    "        \"\"\"\n",
+    "        # Assign a seed to our random number generator to ensure we get\n",
+    "        # reproducable results during development \n",
+    "        np.random.seed(1)\n",
+    "\n",
+    "        # process the reviews and their associated labels so that everything\n",
+    "        # is ready for training\n",
+    "        self.pre_process_data(reviews, labels)\n",
+    "        \n",
+    "        # Build the network to have the number of hidden nodes and the learning rate that\n",
+    "        # were passed into this initializer. Make the same number of input nodes as\n",
+    "        # there are vocabulary words and create a single output node.\n",
+    "        self.init_network(len(self.review_vocab),hidden_nodes, 1, learning_rate)\n",
+    "\n",
+    "    def pre_process_data(self, reviews, labels):\n",
+    "        \n",
+    "        review_vocab = set()\n",
+    "        # TODO: populate review_vocab with all of the words in the given reviews\n",
+    "        #       Remember to split reviews into individual words \n",
+    "        #       using \"split(' ')\" instead of \"split()\".\n",
+    "        for review in reviews:\n",
+    "            for word in review.split(' '):\n",
+    "                if len(word) > 0:\n",
+    "                    review_vocab.add(word)\n",
+    "        \n",
+    "        # Convert the vocabulary set to a list so we can access words via indices\n",
+    "        self.review_vocab = list(review_vocab)\n",
+    "        \n",
+    "        label_vocab = set()\n",
+    "        for label in labels:\n",
+    "            label_vocab.add(label)\n",
+    "        \n",
+    "        # Convert the label vocabulary set to a list so we can access labels via indices\n",
+    "        self.label_vocab = list(label_vocab)\n",
+    "        \n",
+    "        # Store the sizes of the review and label vocabularies.\n",
+    "        self.review_vocab_size = len(self.review_vocab)\n",
+    "        self.label_vocab_size = len(self.label_vocab)\n",
+    "        \n",
+    "        # Create a dictionary of words in the vocabulary mapped to index positions\n",
+    "        self.word2index = {}\n",
+    "        for i,word in enumerate(self.review_vocab):\n",
+    "            self.word2index[word] = i\n",
+    "\n",
+    "        \n",
+    "        # Create a dictionary of labels mapped to index positions\n",
+    "        self.label2index = {}\n",
+    "        for i, label in enumerate(self.label_vocab):\n",
+    "            self.label2index[label] = i\n",
+    "        # TODO: do the same thing you did for self.word2index and self.review_vocab, \n",
+    "        #       but for self.label2index and self.label_vocab instead\n",
+    "         \n",
+    "        \n",
+    "    def init_network(self, input_nodes, hidden_nodes, output_nodes, learning_rate):\n",
+    "        # Store the number of nodes in input, hidden, and output layers.\n",
+    "        self.input_nodes = input_nodes\n",
+    "        self.hidden_nodes = hidden_nodes\n",
+    "        self.output_nodes = output_nodes\n",
+    "\n",
+    "        # Store the learning rate\n",
+    "        self.learning_rate = learning_rate\n",
+    "\n",
+    "        # Initialize weights\n",
+    "        \n",
+    "        # TODO: initialize self.weights_0_1 as a matrix of zeros. These are the weights between\n",
+    "        #       the input layer and the hidden layer.\n",
+    "        self.weights_0_1 = np.zeros((self.input_nodes,self.hidden_nodes))\n",
+    "        \n",
+    "        # TODO: initialize self.weights_1_2 as a matrix of random values. \n",
+    "        #       These are the weights between the hidden layer and the output layer.\n",
+    "        self.weights_1_2 = np.random.normal(0.0, self.output_nodes**-0.5, \n",
+    "                                                (self.hidden_nodes, self.output_nodes))\n",
+    "        \n",
+    "        self.layer_1 = np.zeros((1,hidden_nodes))\n",
+    "    \n",
+    "                \n",
+    "    def get_target_for_label(self,label):\n",
+    "        # TODO: Copy the code you wrote for get_target_for_label \n",
+    "        #       earlier in this notebook. \n",
+    "        return self.label2index[label]\n",
+    "        \n",
+    "    def sigmoid(self,x):\n",
+    "        # TODO: Return the result of calculating the sigmoid activation function\n",
+    "        #       shown in the lectures\n",
+    "        return 1/(1+np.exp(-x))\n",
+    "    \n",
+    "    def sigmoid_output_2_derivative(self,output):\n",
+    "        # TODO: Return the derivative of the sigmoid activation function, \n",
+    "        #       where \"output\" is the original output from the sigmoid fucntion \n",
+    "        return output*(1-output)\n",
+    "\n",
+    "    def train(self, training_reviews_raw, training_labels):\n",
+    "        \n",
+    "        # make sure out we have a matching number of reviews and labels\n",
+    "        assert(len(training_reviews_raw) == len(training_labels))\n",
+    "        \n",
+    "        # Keep track of correct predictions to display accuracy during training \n",
+    "        correct_so_far = 0\n",
+    "        \n",
+    "        # Remember when we started for printing time statistics\n",
+    "        start = time.time()\n",
+    "\n",
+    "        # loop through all the given reviews and run a forward and backward pass,\n",
+    "        # updating weights for every item\n",
+    "        for i in range(len(training_reviews_raw)):\n",
+    "            \n",
+    "            review = []\n",
+    "            target = self.get_target_for_label(training_labels[i])\n",
+    "            \n",
+    "            for word in training_reviews_raw[i].split(' '):\n",
+    "                if (word in self.word2index.keys()):\n",
+    "                    review.append(self.word2index[word])\n",
+    "\n",
+    "            for i in review:\n",
+    "                self.layer_1 += self.weights_0_1[i,:]\n",
+    "            output = self.sigmoid(np.matmul(self.layer_1,self.weights_1_2))\n",
+    "            \n",
+    "            # TODO: Implement the back propagation pass here. \n",
+    "            #       That means calculate the error for the forward pass's prediction\n",
+    "            #       and update the weights in the network according to their\n",
+    "            #       contributions toward the error, as calculated via the\n",
+    "            #       gradient descent and back propagation algorithms you \n",
+    "            #       learned in class.\n",
+    "            error = target - output\n",
+    "        \n",
+    "            layer2errorTerm = error*self.sigmoid_output_2_derivative(output)\n",
+    "            layer1errorTerm = layer2errorTerm.dot(self.weights_1_2.T)\n",
+    "            \n",
+    "            self.weights_1_2 += self.learning_rate*np.dot(self.layer_1.T,layer2errorTerm)\n",
+    "            for i in review:\n",
+    "                self.weights_0_1[i] += self.learning_rate*layer1errorTerm[0]\n",
+    "        \n",
+    "            \n",
+    "            # TODO: Keep track of correct predictions. To determine if the prediction was\n",
+    "            #       correct, check that the absolute value of the output error \n",
+    "            #       is less than 0.5. If so, add one to the correct_so_far count.\n",
+    "            if (error*error < 0.25):\n",
+    "                correct_so_far += 1\n",
+    "            \n",
+    "            # For debug purposes, print out our prediction accuracy and speed \n",
+    "            # throughout the training process. \n",
+    "\n",
+    "            elapsed_time = float(time.time() - start)\n",
+    "            reviews_per_second = i / elapsed_time if elapsed_time > 0 else 0\n",
+    "            \n",
+    "            sys.stdout.write(\"\\rProgress:\" + str(100 * i/float(len(training_reviews_raw)))[:4] \\\n",
+    "                             + \"% Speed(reviews/sec):\" + str(reviews_per_second)[0:5] \\\n",
+    "                             + \" #Correct:\" + str(correct_so_far) + \" #Trained:\" + str(i+1) \\\n",
+    "                             + \" Training Accuracy:\" + str(correct_so_far * 100 / float(i+1))[:4] + \"%\")\n",
+    "            #+ str(self.weights_0_1) + str(self.weights_1_2)\n",
+    "            if(i % 2500 == 0):\n",
+    "                print(\"\")\n",
+    "    \n",
+    "    \n",
+    "    def test(self, testing_reviews, testing_labels):\n",
+    "        \"\"\"\n",
+    "        Attempts to predict the labels for the given testing_reviews,\n",
+    "        and uses the test_labels to calculate the accuracy of those predictions.\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        # keep track of how many correct predictions we make\n",
+    "        correct = 0\n",
+    "\n",
+    "        # we'll time how many predictions per second we make\n",
+    "        start = time.time()\n",
+    "\n",
+    "        # Loop through each of the given reviews and call run to predict\n",
+    "        # its label. \n",
+    "        for i in range(len(testing_reviews)):\n",
+    "            pred = self.run(testing_reviews[i])\n",
+    "            if(pred == testing_labels[i]):\n",
+    "                correct += 1\n",
+    "            \n",
+    "            # For debug purposes, print out our prediction accuracy and speed \n",
+    "            # throughout the prediction process. \n",
+    "\n",
+    "            elapsed_time = float(time.time() - start)\n",
+    "            reviews_per_second = i / elapsed_time if elapsed_time > 0 else 0\n",
+    "            \n",
+    "            sys.stdout.write(\"\\rProgress:\" + str(100 * i/float(len(testing_reviews)))[:4] \\\n",
+    "                             + \"% Speed(reviews/sec):\" + str(reviews_per_second)[0:5] \\\n",
+    "                             + \" #Correct:\" + str(correct) + \" #Tested:\" + str(i+1) \\\n",
+    "                             + \" Testing Accuracy:\" + str(correct * 100 / float(i+1))[:4] + \"%\")   \n",
+    "    def run(self, review):\n",
+    "        \"\"\"\n",
+    "        Returns a POSITIVE or NEGATIVE prediction for the given review.\n",
+    "        \"\"\"\n",
+    "        review = []\n",
+    "        for word in training_reviews_raw[i].split(' '):\n",
+    "            if (word in self.word2index.keys()):\n",
+    "                review.append(self.word2index[word])\n",
+    "\n",
+    "        for i in review:\n",
+    "            self.layer_1 += self.weights_0_1[i,:]\n",
+    "        output = self.sigmoid(np.matmul(self.layer_1,self.weights_1_2))\n",
+    "        \n",
+    "        # TODO: The output layer should now contain a prediction. \n",
+    "        #       Return `POSITIVE` for predictions greater-than-or-equal-to `0.5`, \n",
+    "        #       and `NEGATIVE` otherwise.\n",
+    "        if (output >= 0.5):\n",
+    "            return 'POSITIVE'\n",
+    "        else:\n",
+    "            return 'NEGATIVE'"
    ]
   },
   {
@@ -7076,11 +7289,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Progress:2.99% Speed(reviews/sec):228.5 #Correct:2 #Trained:720 Training Accuracy:0.27%%"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/willng/Documents/reading/nd101/mlenv/lib/python2.7/site-packages/ipykernel_launcher.py:100: RuntimeWarning: overflow encountered in exp\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Progress:257.% Speed(reviews/sec):603.1 #Correct:117 #Trained:61843 Training Accuracy:0.18%"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-6f21d9fc73d2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mmlp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSentimentNetwork\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreviews\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1000\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1000\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlearning_rate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mmlp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreviews\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1000\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1000\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-10-dd31c6444dcc>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(self, training_reviews_raw, training_labels)\u001b[0m\n\u001b[1;32m    124\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    125\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mword\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtraining_reviews_raw\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m' '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 126\u001b[0;31m                 \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mword\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mword2index\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    127\u001b[0m                     \u001b[0mreview\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mword2index\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mword\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    128\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "mlp = SentimentNetwork(reviews[:-1000],labels[:-1000], learning_rate=0.1)\n",
     "mlp.train(reviews[:-1000],labels[:-1000])"
@@ -7500,14 +7745,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
